--- a/_posts/2023-07-12-HistData.md
+++ b/_posts/2023-07-12-HistData.md
@@ -15,8 +15,8 @@ objectives:
   - o: Be confident in visualizing relations and quantities with HistData and ggplot2;
   - o: Explore the Nightingale dataset and replicate a historical visualization using ggplot2.
 keywords: R, statistics, historicaldata, histdata, ggplot2, data visualization, data analysis, pivot_longer
-description: learn to use the HistData package use it on your studies or research.
-last_modified_at: 12-July-23
+description: Explore the world of historical data analysis using R's powerful package - HistData. This package contains a collection of more than 30 datasets for your research.
+last_modified_at: 02-Sep-23
 ---
 
 <br>
