--- a/_posts/2025-02-24-geom_bar.md
+++ b/_posts/2025-02-24-geom_bar.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Bruno Ponne
-title: Demystifying geom_bar() - How ggplot2 Automatically Counts and Transforms Data
+title: Understand geom_bar and its statistical transformations
 attributes:
   - e: Medium
   - e: R
