geom_bar post title change

--- a/_posts/2025-02-24-geom_bar.md
+++ b/_posts/2025-02-24-geom_bar.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Bruno Ponne
-title: Understand geom_bar and its statistical transformations
+title: geom_bar() in ggplot2 Explained - When to Use stat='count' vs stat='identity'
 attributes:
   - e: Medium
   - e: R
@@ -13,7 +13,7 @@ objectives:
   - o: Learn the basic use of geom_bar;
   - o: Be comfortable customizing geom_bar with stat and position;
 keywords: geom_bar, bar plot, stacked bar plot, r, statistics
-description: Learn how to use geom_bar() in ggplot2 to create bar charts effortlessly. Discover default behaviors, statistical transformations, stacking, reordering, and more to improve your data visualizations in R
+description: Learn how to use geom_bar() in ggplot2 to create count and identity bar plots. Understand how ggplot2’s statistical transformations work and how to customize your bars with stat and position.
 sd: false
 last_modified_at: 24-Feb-25
 ---
