--- a/_posts/2025-09-21-T-Test-in-R.md
+++ b/_posts/2025-09-21-T-Test-in-R.md
@@ -5,7 +5,7 @@ tags: r statistics
 image: lesson_29.jpg
 abstract: In this lesson you will learn how to check if the differences in two samples are statistically significant.
 keywords: r, t test, statistics, t test in r
-description: 
+description: Learn how to perform a T-Test in R and explore the statistical intuition behind the test.
 last_modified_at: 21-Sept-25
 ---
 
